cabal-version:      2.4
name:               scheme48
version:            0.1.0.0
executable scheme48
    main-is:          Main.hs
    other-modules:
      Apply
      Eval
      Read
      Types
      Utils
    other-extensions:
    build-depends:    base ^>=4.14.3.0, parsec, mtl, containers
    hs-source-dirs:   app
    default-language: Haskell2010
